# margv

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/hello_margv/: CMakeLists.txt
apps/hello_margv/src/: hello_margv.cpp
apps/margv_example/: CMakeLists.txt
apps/margv_example/src/: main.cpp
include/margv/: margv.hpp
